Changelog
=========

1.0.8 (unreleased)
------------------

- Nothing changed yet.


1.0.7 (2012-06-13)
------------------

- News-listing: New news should be listed at top.
  [Julian Infanger]


1.0.6 (2012-06-08)
------------------

- Created upgradestep to install NewsFolder and dont allow to add
  News in OrgUnit or ContentPage.
  [Julian Infanger]

- Added new content type NewsFolder. Created news_archive_listing.
  [Julian Infanger]


1.0.5 (2012-05-30)
------------------

- Fixed byline viewlet. Added creator and modification date.
  [Julian Infanger]


1.0.4 (2012-05-09)
------------------

- Added default date for news.
  [Julian Infanger]

- Added viewlets for byline and image.
  [Julian Infanger]

- Improved news listing view
  [Julian Infanger]


1.0.3 (2012-04-05)
------------------

- Fix RSS-Feed format.
  [mathias.leimgruber]

- german translations
  [mathias.leimgruber]


1.0.2 (2012-04-02)
------------------

- Fix collective.portlet.collectionmultiview imports.
  [eschmutz]


1.0.1 (2012-03-05)
------------------

- Initial release
- news type based on simplelayout page
- add simple topic summary news view
