@@ -4,7 +4,8 @@ Changelog
 1.0.8 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fixed error in newsportlet using a template for collection portlet.
+  [Julian Infanger]
 
 
 1.0.7 (2012-06-13)
